--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@typescript-eslint/parser": "8.23.0",
     "allure-cucumberjs": "^3.0.7",
     "allure-playwright": "^3.0.7",
-    "cucumber-html-reporter": "7.2.0",
+    "cucumber-html-reporter": "^6.0.0",
     "eslint": "9.17.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-playwright": "2.1.0",
@@ -64,7 +64,7 @@
     "prettier": "3.4.2",
     "rimraf": "6.0.1",
     "ts-node": "10.9.2",
-    "tsx": "4.19.2",
+    "tsx": "^4.19.3",
     "typescript": "5.7.2",
     "typescript-eslint": "8.23.0"
   }
