--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "snippets": "npm run cucumber  features/**/*.feature --dry-run --format snippets",
     "steps-usage": "tsx node_modules/@cucumber/cucumber/bin/cucumber.js features/**/*.feature --dry-run",
     "all": "npm run cucumber features/**/*.feature",
-    "test": "npm run cucumber ",
+    "test": "USE_ALLURE=true npx cucumber-js --require ts-node/register --config cucumber.mjs",
     "test:parallel": "npm run cucumber  --parallel=2",
     "docker": "docker run --rm --network host -v $(pwd):/work/ -w /work/ -it mcr.microsoft.com/playwright:latest /bin/bash",
     "allure": "allure serve reports/allure-results"
+
   },
   "engines": {
     "node": ">=14"
@@ -37,7 +38,7 @@
   },
   "homepage": "https://github.com/hocinilotfi/playwright-cucumber-typescript-template.git#readme",
   "devDependencies": {
-    "@cucumber/cucumber": "11.1.1",
+    "@cucumber/cucumber": "^11.1.1",
     "@cucumber/html-formatter": "21.7.0",
     "@cucumber/messages": "27.0.2",
     "@cucumber/pretty-formatter": "1.0.1",
@@ -49,7 +50,8 @@
     "@types/pngjs": "6.0.5",
     "@typescript-eslint/eslint-plugin": "8.23.0",
     "@typescript-eslint/parser": "8.23.0",
-    "allure-cucumberjs": "^3.0.7",
+    "allure-commandline": "^2.33.0",
+    "allure-cucumberjs": "^3.2.0",
     "allure-playwright": "^3.0.7",
     "cucumber-html-reporter": "^6.0.0",
     "eslint": "9.17.0",
@@ -60,12 +62,13 @@
     "multiple-cucumber-html-reporter": "3.8.0",
     "open": "10.1.0",
     "pixelmatch": "6.0.0",
+    "playwright": "^1.51.1",
     "pngjs": "7.0.0",
     "prettier": "3.4.2",
     "rimraf": "6.0.1",
-    "ts-node": "10.9.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
-    "typescript": "5.7.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "8.23.0"
   }
 }
