--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "snippets": "npm run cucumber  features/**/*.feature --dry-run --format snippets",
     "steps-usage": "tsx node_modules/@cucumber/cucumber/bin/cucumber.js features/**/*.feature --dry-run",
     "all": "npm run cucumber features/**/*.feature",
-    "test": "USE_ALLURE=true npx cucumber-js --require ts-node/register --config cucumber.mjs",
+    "test": "npx cucumber",
     "test:parallel": "npm run cucumber  --parallel=2",
     "docker": "docker run --rm --network host -v $(pwd):/work/ -w /work/ -it mcr.microsoft.com/playwright:latest /bin/bash",
     "allure": "allure serve reports/allure-results"
